Add more size information

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,11 @@ commands:
   copy-into-container:
     steps:
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs .
             du -hs *
+            du --human-readable --count --threshold=5M
       # https://circleci.com/docs/2.0/building-docker-images/#mounting-folders
       - run:
           name: Copy app directory into dev container
@@ -73,11 +73,11 @@ commands:
             - v12-<< parameters.project >>-{{ checksum "<< parameters.project >>/Cargo.lock" }}
             - v12-<< parameters.project >>
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs dotcargo/*
+            du --human-readable --count --threshold=5M
       - run:
           name: Set up volume for cargo
           command: |
@@ -97,12 +97,12 @@ commands:
             docker cp vols:/home/dark/app/<< parameters.project >>/target << parameters.project >>/
             docker cp vols:/home/dark/.cargo dotcargo
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs << parameters.project >>/target
             du -hs dotcargo/*
+            du --human-readable --count --threshold=5M
       # https://doc.rust-lang.org/nightly/cargo/guide/cargo-home.html#caching-the-cargo-home-in-ci
       - save_cache:
           name: "Save << parameters.project >> cache"
@@ -266,11 +266,11 @@ jobs:
       # appsupport is needed for a unit test
       - run: touch backend/static/appsupport.js
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs backend/*
+            du --human-readable --count --threshold=5M
       - run:
           # Everything else is copied in via copy-into-container, but it
           # doesn't include this because it's not in /home/dark/app.
@@ -303,11 +303,11 @@ jobs:
             docker cp vols:/home/dark/app/backend/static/. backend/static
             docker cp vols:/home/dark/.esy dotesy
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs backend/*
+            du --human-readable --count --threshold=5M
       - save_cache:
           name: "Save daily backend cache"
           paths:
@@ -383,13 +383,13 @@ jobs:
             docker cp vols:/home/dark/app/client/lib client
             docker cp vols:/home/dark/app/backend/static/. backend/static
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs .
             du -hs client/node_modules
             du -hs client/lib
             du -hs backend/static
+            du --human-readable --count --threshold=5M
       - save_cache:
           name: "Save packagejson-specific cache"
           paths: [ "client/node_modules" ]
@@ -438,12 +438,12 @@ jobs:
             - v9-client-{{ checksum "rundir/minus3-timestamp" }}
 
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs backend/*
             du -hs client/*
+            du --human-readable --count --threshold=5M
 
       - copy-into-container
       - run-background-container
@@ -480,12 +480,12 @@ jobs:
             - v9-client-{{ checksum "rundir/minus2-timestamp" }}
             - v9-client-{{ checksum "rundir/minus3-timestamp" }}
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs backend/*
             du -hs client/*
+            du --human-readable --count --threshold=5M
       - rust-setup: { project: "queue-scheduler" }
       - copy-into-container
       - run-background-container
@@ -503,11 +503,11 @@ jobs:
       - initialize
       - attach_workspace: { at: "." }
       - run:
-          name: du -hs
           command: |
-            set +e
+            set +ex
             du -hs *
             du -hs backend/*
+            du --human-readable --count --threshold=5M
       - copy-into-container
       - run-background-container
       # Now that the workspaces have combined, we need to regenerate etags.json
