Even more debugging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ commands:
     steps:
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs .
             du -hs *
             du --human-readable --count --threshold=5M
@@ -20,7 +21,7 @@ commands:
       - run:
           name: Copy app directory into dev container
           command: |
-            docker cp . vols:/home/dark/app
+            time docker cp . vols:/home/dark/app
       - set-ownership:
           path: "/home/dark/app"
 
@@ -53,9 +54,10 @@ commands:
           name: Copy out artifacts
           when: always
           command: |
+            set -x
             mkdir -p artifacts
-            docker cp vols:/home/dark/app/rundir artifacts/rundir
-            docker cp vols:/home/dark/app/backend/static/etags.json artifacts/
+            time docker cp vols:/home/dark/app/rundir artifacts/rundir
+            time docker cp vols:/home/dark/app/backend/static/etags.json artifacts/
             ls -la backend/static > artifacts/asset-list.txt
       - store_artifacts:
           path: artifacts
@@ -74,16 +76,18 @@ commands:
             - v12-<< parameters.project >>
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs *
             du -hs dotcargo/*
             du --human-readable --count --threshold=5M
       - run:
           name: Set up volume for cargo
           command: |
-            mkdir -p dotcargo
-            docker cp dotcargo/. vols:/home/dark/.cargo
-            rm -Rf dotcargo # don't copy it a second time when we copy-into-container
+            set -x
+            time mkdir -p dotcargo
+            time docker cp dotcargo/. vols:/home/dark/.cargo
+            time rm -Rf dotcargo # don't copy it a second time when we copy-into-container
       - set-ownership: { path: "/home/dark/.cargo" }
 
   rust-cache:
@@ -94,11 +98,13 @@ commands:
       - run:
           name: Copy out generated files and caches
           command: |
-            docker cp vols:/home/dark/app/<< parameters.project >>/target << parameters.project >>/
-            docker cp vols:/home/dark/.cargo dotcargo
+            set -x
+            time docker cp vols:/home/dark/app/<< parameters.project >>/target << parameters.project >>/
+            time docker cp vols:/home/dark/.cargo dotcargo
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs *
             du -hs << parameters.project >>/target
             du -hs dotcargo/*
@@ -262,7 +268,6 @@ jobs:
             - v11-backend-{{ checksum "rundir/minus2-timestamp" }}
             - v11-backend-{{ checksum "rundir/minus3-timestamp" }}
       - clean-caches: { path: "backend/_build" }
-      - clean-caches: { path: "dotesy" }
       # appsupport is needed for a unit test
       - run: touch backend/static/appsupport.js
       - run:
@@ -276,9 +281,10 @@ jobs:
           # doesn't include this because it's not in /home/dark/app.
           name: Set up volume for dotesy
           command: |
+            set -x
             mkdir -p dotesy
-            docker cp dotesy/. vols:/home/dark/.esy
-            rm -Rf dotesy # don't copy it a second time
+            time docker cp dotesy/. vols:/home/dark/.esy
+            time rm -Rf dotesy # don't copy it a second time
       - set-ownership:
           path: "/home/dark/.esy"
       - copy-into-container
@@ -293,18 +299,21 @@ jobs:
       - run:
           name: Reduce size of esy cache
           command: |
+            set -x
             ./scripts/run-in-docker rm -Rf /home/dark/.esy/3/b
       - run:
           name: Copy out generated files and caches
           command: |
-            docker cp vols:/home/dark/app/backend/_build backend/
-            docker cp vols:/home/dark/app/backend/_esy backend/
-            docker cp vols:/home/dark/app/backend/node_modules backend/
-            docker cp vols:/home/dark/app/backend/static/. backend/static
-            docker cp vols:/home/dark/.esy dotesy
+            set -x
+            time docker cp vols:/home/dark/app/backend/_build backend/
+            time docker cp vols:/home/dark/app/backend/_esy backend/
+            time docker cp vols:/home/dark/app/backend/node_modules backend/
+            time docker cp vols:/home/dark/app/backend/static/. backend/static
+            time docker cp vols:/home/dark/.esy dotesy
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs *
             du -hs backend/*
             du --human-readable --count --threshold=5M
@@ -327,8 +336,9 @@ jobs:
           name: Copy out artifacts
           when: always
           command: |
+            set -x
             mkdir -p artifacts
-            docker cp vols:/home/dark/app/rundir artifacts/rundir
+            time docker cp vols:/home/dark/app/rundir artifacts/rundir
       - store_artifacts:
           path: artifacts
       - store_test_results:
@@ -379,12 +389,14 @@ jobs:
       - run:
           name: Copy out generated files and caches
           command: |
-            docker cp vols:/home/dark/app/client/node_modules client
-            docker cp vols:/home/dark/app/client/lib client
-            docker cp vols:/home/dark/app/backend/static/. backend/static
+            set -x
+            time docker cp vols:/home/dark/app/client/node_modules client
+            time docker cp vols:/home/dark/app/client/lib client
+            time docker cp vols:/home/dark/app/backend/static/. backend/static
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs .
             du -hs client/node_modules
             du -hs client/lib
@@ -411,9 +423,10 @@ jobs:
           name: Copy out artifacts
           when: always
           command: |
-            mkdir -p artifacts
-            docker cp vols:/home/dark/app/rundir artifacts/rundir
-            cp backend/static/etags.json artifacts
+            set -x
+            time mkdir -p artifacts
+            time docker cp vols:/home/dark/app/rundir artifacts/rundir
+            time cp backend/static/etags.json artifacts
             ls -la backend/static > artifacts/asset-list.txt
       - store_artifacts:
           path: artifacts
@@ -439,7 +452,8 @@ jobs:
 
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs *
             du -hs backend/*
             du -hs client/*
@@ -481,7 +495,8 @@ jobs:
             - v9-client-{{ checksum "rundir/minus3-timestamp" }}
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs *
             du -hs backend/*
             du -hs client/*
@@ -504,7 +519,8 @@ jobs:
       - attach_workspace: { at: "." }
       - run:
           command: |
-            set +ex
+            set +e
+            set -x
             du -hs *
             du -hs backend/*
             du --human-readable --count --threshold=5M
@@ -519,14 +535,15 @@ jobs:
       - run: scripts/run-in-docker scripts/gcp-push-images-to-gcr
       # Save the image IDs for deployment later
       - run: |
+          set -x
           mkdir gcr-image-ids
-          docker images gcr.io/balmy-ground-195100/dark-gcp -q | head -n 1 > gcr-image-ids/server
-          docker images gcr.io/balmy-ground-195100/dark-gcp-qw -q | head -n 1 > gcr-image-ids/qw
-          docker images gcr.io/balmy-ground-195100/dark-gcp-cron -q | head -n 1 > gcr-image-ids/cron
-          docker images gcr.io/balmy-ground-195100/dark-gcp-stroller -q | head -n 1 > gcr-image-ids/stroller
-          docker images gcr.io/balmy-ground-195100/dark-gcp-queue-scheduler -q | head -n 1 > gcr-image-ids/queue-scheduler
-          docker images gcr.io/balmy-ground-195100/tunnel -q | head -n 1 > gcr-image-ids/tunnel
-          docker images gcr.io/balmy-ground-195100/dark-gcp-postgres-honeytail -q | head -n 1 > gcr-image-ids/postgres-honeytail
+          time docker images gcr.io/balmy-ground-195100/dark-gcp -q | head -n 1 > gcr-image-ids/server
+          time docker images gcr.io/balmy-ground-195100/dark-gcp-qw -q | head -n 1 > gcr-image-ids/qw
+          time docker images gcr.io/balmy-ground-195100/dark-gcp-cron -q | head -n 1 > gcr-image-ids/cron
+          time docker images gcr.io/balmy-ground-195100/dark-gcp-stroller -q | head -n 1 > gcr-image-ids/stroller
+          time docker images gcr.io/balmy-ground-195100/dark-gcp-queue-scheduler -q | head -n 1 > gcr-image-ids/queue-scheduler
+          time docker images gcr.io/balmy-ground-195100/tunnel -q | head -n 1 > gcr-image-ids/tunnel
+          time docker images gcr.io/balmy-ground-195100/dark-gcp-postgres-honeytail -q | head -n 1 > gcr-image-ids/postgres-honeytail
       - persist_to_workspace:
           root: "."
           paths: [ gcr-image-ids ]
