Reduce the amount of backend bin that we persist

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,7 +331,7 @@ jobs:
           root: "."
           paths:
             # Just enough for integration tests and deploy
-            - backend/_build
+            - backend/_build/default/bin
             - backend/static/analysis.js
       - run:
           name: Copy out artifacts
